tests/snapshots/yaml_suite_snapshots__yaml_suite_LE5A_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 7.24. Flow Nodes
  from: "http://www.yaml.org/spec/1.2/spec.html#id2793490"
  tags: spec tag alias
  yaml: "- !!str \"a\"\n- 'b'\n- &anchor \"c\"\n- *anchor\n- !!str\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL <tag:yaml.org,2002:str> \"a\n   =VAL 'b\n   =VAL &anchor \"c\n   =ALI *anchor\n   =VAL <tag:yaml.org,2002:str> :\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"a\",\n  \"b\",\n  \"c\",\n  \"c\",\n  \"\"\n]\n"
