tests/snapshots/yaml_suite_snapshots__yaml_suite_LHL4_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid tag
  from: "@perlpunk"
  tags: error tag
  fail: true
  yaml: "---\n!invalid{}tag scalar\n"
  tree: "+STR\n +DOC ---\n"
