tests/snapshots/yaml_suite_snapshots__yaml_suite_LHL4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid tag
  tags: error tag
  tree: "+STR\n +DOC ---\n"
  yaml: "---\n!invalid{}tag scalar\n"
