tests/snapshots/yaml_suite_snapshots__yaml_suite_LP6E_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- - a\n  - b\n  - c\n- \"a\": b\n  c: 'd'\n  e: \"f\"\n- []\n"
  from: NimYAML tests
  json: "[\n  [\n    \"a\",\n    \"b\",\n    \"c\"\n  ],\n  {\n    \"a\": \"b\",\n    \"c\": \"d\",\n    \"e\": \"f\"\n  },\n  []\n]\n"
  name: Whitespace After Scalars in Flow
  tags: flow scalar whitespace
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n    =VAL :a\n    =VAL :b\n    =VAL :c\n   -SEQ\n   +MAP {}\n    =VAL \"a\n    =VAL :b\n    =VAL :c\n    =VAL 'd\n    =VAL :e\n    =VAL \"f\n   -MAP\n   +SEQ []\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- [a, b , c ]\n- { \"a\"  : b\n   , c : 'd' ,\n   e   : \"f\"\n  }\n- [      ]\n"
